checkout comment-input

--- a/assets/office/develop/js/handlebars-partials/checkout/pdfDocBox.hbs
+++ b/assets/office/develop/js/handlebars-partials/checkout/pdfDocBox.hbs
@@ -94,7 +94,7 @@
 			<!-- END ITEMS HERE -->
 			<tr class="thead-break"><td></td></tr>
 			<tr class="thead-total">
-				<td colspan="3" class="without-border"></td>
+				<td colspan="3" class="without-border">{{#if comment}}{{comment}}{{/if}}</td>
 				<td colspan="2"><strong>סכום ביניים:</strong></td>
 				<td><strong>{{strFormatPrice cartSubtotalPrice false false}}</strong></td>
 			</tr>
