--- a/office/assets/css/fixstyle.css
+++ b/office/assets/css/fixstyle.css
@@ -870,7 +870,6 @@ html[dir="ltr"] .floating-plus-btn, html[dir=""] .floating-plus-btn {
   }
 }
 .nav-a{
-  margin-right: 1.25rem;
   font-size: 1.1875rem;
   display: block;
   color: black;
@@ -879,13 +878,14 @@ html[dir="ltr"] .floating-plus-btn, html[dir=""] .floating-plus-btn {
   margin: .5rem 0;
   display: block;
 }
-.nav-a:not(:last-child){
+.nav-a:not(:first-child){
   margin-right: 2rem;
 }
 .user-nav{
-  margin: 0 auto;
+  margin: 0 auto 1.25rem;
   display: flex;
-  overflow-x: auto;
+  justify-content: center;
+  overflow: hidden;
 }
 .user-line{
   height: 4px;
