--- a/office/assets/css/fixstyle.css
+++ b/office/assets/css/fixstyle.css
@@ -831,7 +831,10 @@ html[dir="ltr"] .floating-plus-btn, html[dir=""] .floating-plus-btn {
   height: 12px;
   border: 1px solid white;
 }
-
+.header_red_btn{
+  border: 1px solid #FF0045;
+  border-radius: 8px;
+}
 /** animation time change for header scroll **/
 .bsapp-header-primary-menu.light-animated {
   animation-duration: .3s !important;
